--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -16,33 +16,19 @@ jobs:
       fail-fast: false
       matrix:
         # [ ubuntu, macos, windows ]
-        os: [ windows ]
-        ruby: [ 2.4, 2.5, 2.6, 2.7, head ]
-        include:
-          - { os: windows, ruby: mingw }
-          - { os: ubuntu, ruby: truffleruby-head }
-        exclude:
-          - { os: windows, ruby: head  }
+        os: [ ubuntu ]
+        ruby: [ 2.6, truffleruby-head ]
 
     steps:
-      - name: windows misc
-        if: matrix.os == 'windows'
-        run: |
-          # set TMPDIR, git core.autocrlf
-          echo "::set-env name=TMPDIR::$env:RUNNER_TEMP"
-          git config --system core.autocrlf false
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: set up Ruby
-        uses: ruby/setup-ruby@v1
+      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
+          bundler-cache: true
 
-      - name: install dependencies
-        run:  bundle install --jobs 3 --retry 3
       - name: spec
-        run:  bundle exec rake spec
-      - name: ascii_spec
-        run:  bundle exec rake ascii_spec
-      - name: internal_investigation
-        run:  bundle exec rake internal_investigation
+        run: TRUFFLERUBYOPT="--cpusampler" bundle exec rake spec
+      # - name: ascii_spec
+      #   run:  bundle exec rake ascii_spec
+      # - name: internal_investigation
+      #   run:  bundle exec rake internal_investigation
